--- a/设计总纲.md
+++ b/设计总纲.md
@@ -1,25 +1,90 @@
-## 总纲
+# 计算机协会设计总纲
 
-记录项目功能模块，以及说明
+记录项目总体的构造设计，子项目的详细设计，分别在子项目的文档中进行描述
 
-项目背景
+#### 协会简介
 
-总体结构说明
+> 汕尾职业技术学院计算机协会（原电脑爱好者联盟）成立于2006年，是隶属于电脑硬件，软件知识的一个服务团体。社团成立至今，我们不断地从各方面推出丰富多彩的活动，为我院的同学提供了义务维修。
+>
+> 协会本着“**掌握电脑知识，为校友服务**”的宗旨，积极的组织同学在课余时间学习计算机知识。
 
 
 
-## 细分
+### 总体项目构造设计
 
-* 后台
-  * 项目结构，使用技术，模块说明
-  * 错误解决记录
-  * 接口文档
-* 前端：
+采用前后端分离设计。前端使用异步请求技术，请求服务器端得到数据进行渲染页面。服务器提供结构，提供数据`(json)`返回给前端进行渲染。
+
+前端进行判断用户使用的终端，进行跳转，访问对应终端的项目
+
+#### 适配终端选择
+
+* 前端页面分为三个终端分别进行开发
+  * PC端
   * 移动端
-    * 项目结构，使用技术，模块说明
-    * 错误解决记录
-  * pc端
   * 小程序
+* 后端服务器使用`JAVA`进行开发
 
 
 
+### 子项目划分
+
+#### 用户前台
+
+* PC端：swca-pc
+* 移动端：swca-mobile
+* 小程序：swca-mini
+
+#### 用户后台
+
+* PC端：swca-pc
+* 移动端：swca-moblie
+
+#### 服务器端
+
+swca-service
+
+#### 则子项目总共为
+
+* 用户前后台PC端：swca-pc
+* 用户前后台移动端：swca-mobile
+* 用户前台小程序端：swca-mini
+* 服务器端：swca-service
+
+
+
+### 总体功能设计
+
+#### 用户前台
+
+* 首页
+  * 轮播图
+  * 信息发布
+  * 协会简介
+  * 友情链接
+* 个人中心
+  * 本校认证
+  * 信息修改
+  * 消息查看
+
+* 电脑报修
+  * 提交报修单
+  * 报修管理
+* 工具
+  * 课表查询
+  * 公交路线
+  * 成绩查询
+* 计算机教程
+
+#### 用户后台
+
+* 用户管理
+* 报修管理
+* 文章管理
+* 轮播图管理
+* 简介管理
+* 会费管理
+* 友情链接
+
+#### 服务器端
+
+处理用户前后台所有请求，返回`json`数据
