修改服务器端项目名

--- a/设计总纲.md
+++ b/设计总纲.md
@@ -41,14 +41,14 @@
 
 #### 服务器端
 
-swca-service
+swca-server
 
 #### 则子项目总共为
 
 * 用户前后台PC端：swca-pc
 * 用户前后台移动端：swca-mobile
 * 用户前台小程序端：swca-mini
-* 服务器端：swca-service
+* 服务器端：swca-server
 
 
 
@@ -65,7 +65,6 @@ swca-service
   * 本校认证
   * 信息修改
   * 消息查看
-
 * 电脑报修
   * 提交报修单
   * 报修管理
@@ -74,6 +73,7 @@ swca-service
   * 公交路线
   * 成绩查询
 * 计算机教程
+* 讨论区
 
 #### 用户后台
 
